# rpc-client

./: CMakeLists.txt  Cargo.toml  Containerfile  DemoClient.cs  Package.swift  build.gradle  build.gradle.kts  build.sbt  client.cc  client.csproj  client.go  client.php  client.py  client.rb  client.ts  composer.json  demo_client.cc  demo_client.py  demo_client.rb  demo_client.ts  go.mod  mix.exs  package.json  pubspec.yaml
Sources/: main.swift
lib/: application.ex  client.ex
src/: main.rs
src/main/java/: Client.java  DemoClient.java
src/main/kotlin/: DemoClient.kt
src/main/scala/: Client.scala  DemoClient.scala
